# learn-cmake-gtest

./: .gitignore  CMakeLists.txt  README.md  _build
gtest/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
inc/: AClass.hpp  BClass.hpp  addnum.hpp  squarenum.hpp
src/: AClass.cpp  BClass.cpp  addnum.cpp  main.cpp  squarenum.cpp
tst/: mocks.cpp  mocks.hpp  test_main.cpp
